--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ set $WS4 "4: "
 set $WS5 "5: "
 set $WS6 "6: "
 set $WS7 "7: "
-set $WS8 "8: "
+set $WS8 "8: ﭮ"
 
 ###############     Autostart      ##################
 
