--- a/i3/config
+++ b/i3/config
@@ -4,6 +4,7 @@ for_window [class="^.*"] border pixel 1, title_format "<b> %class >> %title </b>
 # gaps
 gaps inner 10
 gaps outer 10
+gaps top 60
 
 # font
 font pango:monospace 12
